fix iframe on ios

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -623,7 +623,7 @@ iframe, object, embed {
   max-height: 700px!important;
   margin: 0 auto;
   display: block;
-  flex-basis: 0px;
+  flex-basis: 100%;
 }
 
 @media screen and (max-width: 42em) {
@@ -636,6 +636,7 @@ iframe, object, embed {
   iframe, object, embed {
     max-width: 100%!important;
     max-height: 300px!important;
+    flex-basis: 0px;
   }
 }
 
